[tool.poetry]
name = "ray-chunkit-chung-gum-gum-pistol"
version = "0.1.2"
description = ""
authors = ["ray-chunkit-chung <ray.chunkit.chung@gmail.com>"]
readme = "README.md"
packages = [{include = "ray_chunkit_chung_gum_gum_pistol"}]

[tool.poetry.scripts]
gum = "ray_chunkit_chung_gum_gum_pistol.main:app"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.7.0"}
pytest = {extras = ["all"], version = "^7.2.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
